fixed scroll position on tab change on mobile

--- a/src/app/components/pages/about/about.component.scss
+++ b/src/app/components/pages/about/about.component.scss
@@ -26,7 +26,7 @@
     }
   }
 
-  .content-section {
+  .sub-router-container {
     height: 100%;
     width: 100%;
     position: relative;
