--- a/src/app/components/pages/projects/projects.component.scss
+++ b/src/app/components/pages/projects/projects.component.scss
@@ -27,7 +27,7 @@
     }
   }
 
-  .content-section {
+  .sub-router-container {
     overflow-y: scroll;
   }
 }
