--- a/src/app/components/pages/slalom/slalom.component.scss
+++ b/src/app/components/pages/slalom/slalom.component.scss
@@ -39,7 +39,7 @@
     }
   }
 
-  .content-section {
+  .sub-router-container {
     overflow-y: scroll;
   }
 }
